# embodied-alife

./: .env.example  .gitignore  A12_ASSET_CLEANUP_SCOPE.md  CHANGELOG.md  README.md  SANDBOX_VERIFICATION.md  WINDOWS_SETUP.md  appdock.json  install-windows.ps1  post2-runner-output.txt  post2-validation-output.txt  post3-final-test-output.txt  post3-focused-output.txt  post3-preedit-audit.txt  post3-release-audit.json  post3-release-members.txt  post4-final.patch.gz.b64  post4-patch.part00  post4-patch.part01  post4-patch.part02  post4-patch.part03  post4-patch.part04  post4-patch.part05  post4-patch.part06  post4-trigger.txt  post5-compile-output.txt  post5-phase10-output.txt  post5-test-output.txt  pyproject.toml  remediation-full-output.txt  remediation-test-output.txt  start-embodied-alife.bat  start.sh
.github/: post2-cleanup-trigger.txt  post2-published-audit-trigger.txt
app/: build_info.py  config.py  diagnostics.py  main.py  serialization.py  serve.py  validation.py  version.py
bootstrap/: source.part00  source.part01  source.part02  source.part03  source.part04  source.part05  source.part06  source.part07  source.part08
data/: README.md
docs/: ARCHITECTURE.md  COGNITIVE_STATE.md  NEW_SESSION_PROMPT.md  PROJECT_HANDOFF.md  ROADMAP.md  SOAK_TEST.md  TROUBLESHOOTING.md
examples/: sample_decision.json  sample_memory_write.json
post5-candidate-evidence/: archive-audit.txt  extracted-package-validation.txt  focused-tests.txt  full-tests.txt  ruff.txt  source-package-validation.txt  status.txt  version-evidence.txt
post5-main-evidence/: archive.txt  build.txt  cleanup.txt  extracted-package.txt  focused.txt  full.txt  main-commit.txt  ruff.txt  source-package.txt  status.txt
scripts/: apply_post3_followup.py  apply_post3_remediation.py  apply_update.py  apply_v040_remediation.py  apply_v040_test_repairs.py  build_release.py  disable-tailscale-access.ps1  enable-tailscale-access.ps1  finalize_v040_post1.py  post2_remediation_applicator.py  post2_repair_applicator.py  post2_validation_applicator.py  post3_preedit_audit.py  post3_release_audit.py  post4_release_audit.py  post5_apply_phase1.py  post5_apply_phase10.py  post5_apply_phase11.py  post5_apply_phase12.py  post5_apply_phase2.py  post5_apply_phase3.py  post5_apply_phase4.py  post5_apply_phase5.py  post5_apply_phase6.py  post5_apply_phase8.py  post5_apply_phase9.py  privacy_scan.py  release_notes.py  (+4 more)
(+126 files in other folders)
