[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "embodied-alife"
version = "0.3.4"
description = "A local deterministic artificial-life world with an optional OpenAI-compatible LLM brain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "packaging>=24,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
